tests/errors/error_display/test_leak_display.sim

        struct L { r: &out i64 }
        fn f(x: L) {
            entry:
            return
        }
    