tests/errors/error_display/test_leak_display.err.expected
error: at 5:13: [SUB-ReturnValueLeak] In function 'f', block 'entry': value 'x' of type L is not consumed at return
   |
 5 |             return
   |             ^^^^^^
  hint: linear values must be consumed or returned before function exit. Try moving or dropping it.
